# chess-c

./: .clang-format  CMakeLists.txt  board.c  board.h  cell.c  cell.h  chess.c  chess.h  enums.h  errno.h  main.c  moves.c  moves.h  position.c  position.h  types.c  types.h  utils.c  utils.h  vector2.c  vector2.h
move/: move.c  move.h  move_array.c  move_array.h
pieces/: bishop.c  bishop.h  king.c  king.h  knight.c  knight.h  pawn.c  pawn.h  piece.c  piece.h  queen.c  queen.h  rook.c  rook.h
